# libzip-jni

./: LICENSE  build.gradle  proguard-rules.pro
src/androidTest/java/mao/archive/libzip/: ExampleInstrumentedTest.java
src/androidTest/resources/: c  d
src/main/: AndroidManifest.xml
src/main/cpp/: AndroidFindOpenssl.cmake  CMakeLists.txt  cmake-zipconf.h.in  jlong_md.h  mao_archive_libzip_ZipFile.h  register_native.c  zip_file.c  zip_file.h
src/main/cpp/lib/: CMakeLists.txt  Makefile.in  config.h  zip.h  zip_close.c  zip_crypto.h  zip_winzip_aes.c
src/main/cpp/lib/gladman-fcrypt/: Makefile.in
src/main/cpp/zlib/: CMakeLists.txt
src/main/java/mao/archive/libzip/: PasswordException.java  ProgressListener.java  WrongPasswordException.java  ZipCoder.java  ZipEntry.java  ZipFile.java
src/main/res/values/: strings.xml
src/test/java/mao/archive/libzip/: ExampleUnitTest.java  GenerateNativeCode.java
